# Tauriexe

./: Cargo.toml  package.json
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  cargo.toml  czkfunc.rs  main.rs  tauri.conf.json
