[package]
name = "tauri_executor"         # ✅ Corrigido (sem espaços)
version = "0.1.0"
description = "Tauri Executor"
authors = ["Seu Nome"]
edition = "2021"

[dependencies]
tauri = { version = "1", features = ["all-api"] }

[build-dependencies]
tauri-build = "1"

[[bin]]
name = "tauri_executor"
path = "src-tauri/main.rs"      # ✅ Especificado o caminho do main.rs
